--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,51 @@
-# Node.js
+# Node.js dependencies
 node_modules/
-.env
-.DS_Store
-dist/
+
+# Next.js build output
+.next/
+out/
 build/
-coverage/
+dist/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 *.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Test coverage
+coverage/
+
+# Editor folders
+.vscode/
+.idea/
+
+# Temporary files
+*.swp
+*.swo
+
+# Local runtime files
+*.pid
+*.seed
+*.pid.lock
+
+# TypeScript
+*.tsbuildinfo
+
+# Ignore local vercel build output
+.vercel/
+
+# Optional: prevent line ending warnings
+.gitattributes
